# cg4002-core

./: README.md  stuff.txt
arduino/: glove (1).ino  gun.ino  vest.ino
eval_server/: MoveEngine.py  eval_server.py  requirements.txt
eval_server/evaluation_logs/: group1_logs.csv  group1_logs.json
eval_sever/: GameState.py  Helper.py  PlayerState.py  README.md  StateStaff.py  eval_server.py
eval_sever/evaluation_logs/: group1_logs.csv  group1_logs.json
hardware_ai/: README.md.txt  SWHW_Impl.ipynb  mlp_model.ipynb  predict.py
hardware_ai/20hz_35buffer_data_eval_2_1/: exit.csv  grenade.csv  reload.csv  shield.csv
hardware_ai/final_model/: design_3_wrapper.hwh
hardware_ai/mlpHLS/: mlp_HLS.cpp
hardware_ai/mlpHLS/mlp_HLS/: .cproject  .project  vivado_hls.app
hardware_ai/mlpHLS/mlp_HLS/.apc/: autopilot.apfmapping
hardware_ai/mlp_HLS/: mlp_HLS.xpr
relay-node/: cg4002.code-workspace  connect.py  relay.py  sensor_pb2.py  test.py  util.py
relay-node-final/: CMakeLists.txt  connect.py  relay.py  sensor.proto  util.py
relay-node-final/__MACOSX/: ._relay.py
ultra96/: CMakeLists.txt  game.cpp  game.hpp  gameState.pb.cc  gameState.pb.h  gameState.proto  player.cpp  player.hpp  pyutil.cpp  sensor.pb.cc  sensor.pb.h  ultra.cpp
utility-server/: predict.py  util-server.py
utility-server/models/testModel_128x128_15hz_9features_left/: keras_metadata.pb  saved_model.pb
utility-server/models/testModel_64x128x256_15hz_9features_left/: keras_metadata.pb  saved_model.pb
utility-server/models/testModel_64x64x64_15hz_9features_left/: keras_metadata.pb  saved_model.pb
utility-server/testModel_64x64_15hz_9features_left/: keras_metadata.pb  saved_model.pb
(+999 files in other folders)
